use cargo generate to scaffold the project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
-name = "colorgen"
+name = "lds-color"
 version = "0.1.0"
 edition = "2021"
+description = "Low discrepancy Sequence Color Generation in Rust"
+repository = "https://github.com/luk036/lds-color"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lds-rs = { path = "../lds-rs" }
-palette = "0.6"
+lds-rs = { git = "https://github.com/luk036/lds-rs" }
+palette = "0.7.2"
