--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lds-rs = { git = "https://github.com/luk036/lds-rs" }
+lds-rs = "0.1.0"
 palette = "0.7.2"
